--- a/_includes/advantages/advantages.scss
+++ b/_includes/advantages/advantages.scss
@@ -6,7 +6,7 @@
   .content-block {
 
     .title {
-      @include tablet-screen {
+      @include small-desktop-screen {
         @include font(38px, 600);
       }
 
@@ -16,7 +16,7 @@
     }
 
     .description {
-      @include tablet-screen {
+      @include small-desktop-screen {
         @include font(22px, 300);
       }
 
@@ -50,7 +50,11 @@
 
     .advantage {
       display: grid;
-      grid-template-columns: 66px repeat(2, 1fr);
+      grid-template-columns: 66px 294px;
+
+      @include small-desktop-screen {
+        grid-template-columns: 66px 234px;
+      }
 
       .icon {
         height: 50px;
@@ -59,11 +63,11 @@
 
       .adv-title {
         @include font(18px, 600);
-        grid-column: 2 / 4;
+        grid-column: 2 / 2;
         display: flex;
         align-items: center;
 
-        @include tablet-screen {
+        @include small-desktop-screen {
           font-size: 16px;
         }
 
@@ -74,13 +78,14 @@
 
       .adv-description {
         @include font(16px, 300);
-        grid-column: 1 / 4;
+        grid-column: 1 / 3;
         grid-row: 2;
         padding-top: 12px;
         text-align: left;
         line-height: 1.55;
+        max-width: 360px;
 
-        @include tablet-screen {
+        @include small-desktop-screen {
           font-size: 14px;
         }
 
