--- a/_includes/blog/blog.scss
+++ b/_includes/blog/blog.scss
@@ -2,6 +2,10 @@
   background-color: #f5f5f5;
 
   .title {
+    @include small-desktop-screen {
+      font-size: 38px;
+    }
+
     @include tablet-screen {
       @include font(30px, 600);
     }
@@ -9,6 +13,10 @@
 
   .subtitle {
     margin-bottom: 90px;
+
+    @include small-desktop-screen {
+      font-size: 22px;
+    }
 
     @include tablet-screen {
       @include font(20px, 300);
