add custom file label

--- a/_includes/contact-us/contact-us.html
+++ b/_includes/contact-us/contact-us.html
@@ -23,7 +23,9 @@
                 <textarea placeholder="Your text"></textarea>
             </label>
             <div class="file-wrapper">
-                <input type="file">
+                <label id="custom-btn" class="file-label" for="file-upload">Choose file</label>
+                <input id="file-upload" type="file" hidden="hidden">
+                <div id="custom-text" class="text-helper"></div>
             </div>
         </form>
         <div class="button-wrapper transite transite-up sn-3">
