--- a/_includes/blog/blog.scss
+++ b/_includes/blog/blog.scss
@@ -7,6 +7,10 @@
     }
 
     @include tablet-screen {
+      font-size: 38px;
+    }
+
+    @include small-tablet-screen {
       @include font(30px, 600);
     }
   }
@@ -19,6 +23,10 @@
     }
 
     @include tablet-screen {
+      font-size: 22px;
+    }
+
+    @include small-tablet-screen {
       @include font(20px, 300);
       margin-bottom: 45px;
 
