--- a/_includes/intro/intro.scss
+++ b/_includes/intro/intro.scss
@@ -29,7 +29,7 @@
         max-width: 960px;
         white-space:nowrap;
 
-        @include tablet-screen {
+        @include small-desktop-screen {
           font-size: 68px;
         }
 
@@ -63,6 +63,7 @@
         line-height: 1.55;
 
         @include small-desktop-screen {
+          font-size: 20px;
           width: 780px;
         }
 
