fix bug with texts on intro section

--- a/_includes/intro/intro.scss
+++ b/_includes/intro/intro.scss
@@ -41,6 +41,7 @@
           @include font(30px, 600);
           padding-inline: 10px;
           letter-spacing: 1px;
+          white-space: normal;
         }
       }
 
@@ -69,7 +70,7 @@
 
         @include tablet-screen {
           font-size: 20px;
-          max-width: 640px;
+          width: 100%;
         }
 
         @include small-tablet-screen {
