--- a/_includes/contact-us/contact-us.scss
+++ b/_includes/contact-us/contact-us.scss
@@ -47,6 +47,12 @@
         margin-left: 20px;
         color: rgba(130, 128, 128, 1);
       }
+
+      .remove-btn {
+        display: none;
+        cursor: pointer;
+        margin-left: 26px;
+      }
     }
 
     textarea {
@@ -66,6 +72,7 @@
   }
 
   .additional-text {
+    padding: 24px 0;
     text-align: center;
   }
 }
