--- a/_includes/contact-us/contact-us.html
+++ b/_includes/contact-us/contact-us.html
@@ -12,13 +12,11 @@
             <h1 class="transite transite-up sn-1">{{ content.title }}</h1>
             <h2 class="transite transite-up sn-2">{{ content.subTitle }}</h2>
         </div>
-        <form class="form-wrapper">
-            <label>
-                <input required placeholder="Your name" type="text">
-            </label>
-            <label>
-                <input required placeholder="Your E-mail" type="text">
-            </label>
+        <form id="contact-form" onsubmit="return onSubmit()" class="form-wrapper">
+            <div class="input-wrapper">
+                <input id="name-input" placeholder="Your name" type="text">
+                <input id="email-input" placeholder="Your E-mail" type="text">
+            </div>
             <label>
                 <textarea placeholder="Your text"></textarea>
             </label>
@@ -33,10 +31,11 @@
                     </svg>
                 </div>
             </div>
+            <div class="button-wrapper transite transite-up sn-3">
+                <input value="Contact Us" type="submit">
+            </div>
         </form>
-        <div class="button-wrapper transite transite-up sn-3">
-            <button class="button">Contact Us</button>
-        </div>
         <div class="additional-text">{{ content.additionalText }}</div>
+        <div class="error-block">asd</div>
     </div>
 </section>
