--- a/_includes/contact-us/contact-us.scss
+++ b/_includes/contact-us/contact-us.scss
@@ -77,15 +77,17 @@
       }
     }
 
-    textarea {
+    #comment-input {
       @include font(16px, 400);
+      font-family: 'Roboto', Arial, sans-serif;
+      width: 960px;
       line-height: 24px;
       padding: 16px 20px;
-      width: 960px;
-      min-height: 56px;
       background-color: transparent;
       border: 1px solid rgba(122, 120, 120, 1);
       border-radius: 3px;
+      color: white;
+      resize: none;
     }
 
     .button-wrapper {
@@ -105,5 +107,32 @@
   .additional-text {
     padding: 24px 0;
     text-align: center;
+  }
+
+  .success-block {
+    @include flex(column, center, center);
+    display: none;
+    @include size(960px, 380px);
+    border: 1px solid #7A7878;
+    margin: 30px auto 0;
+    position: relative;
+
+    .success-icon {
+      position: absolute;
+      bottom: 87%;
+    }
+
+    .success-title {
+      @include font(36px, 600);
+      line-height: 54px;
+    }
+
+    .success-text {
+      @include font(24px, 300);
+      line-height: 36px;
+      max-width: 640px;
+      text-align: center;
+    }
+
   }
 }
