--- a/assets/css/_mixins.scss
+++ b/assets/css/_mixins.scss
@@ -1,4 +1,6 @@
 $orange: #f5914f;
+$grey: rgba(122, 120, 120, 1);
+$borderRadius3: 3px;
 $width-mobile: 480px;
 $width-tablet: 960px;
 $width-small-tablet: 640px;
