--- a/_includes/contact-us/contact-us.scss
+++ b/_includes/contact-us/contact-us.scss
@@ -1,11 +1,27 @@
 @import 'mixins';
 
-.contact-us {
+.contact-us.section.section-dark {
   background-color: black;
-  padding: 120px 0 136px !important;
+  padding: 120px 0 136px;
+
+  @include tablet-screen {
+    padding: 0 20px 20px;
+  }
 
   .text-center {
     margin-bottom: 74px;
+
+    .title {
+      @include tablet-screen {
+        @include font(30px, 700);
+      }
+    }
+
+    .subtitle {
+      @include tablet-screen {
+        @include font(20px, 300);
+      }
+    }
   }
 
   .form-wrapper {
@@ -18,8 +34,18 @@
       @include flex(row, space-between, flex-start);
       padding-bottom: 24px;
 
+      @include tablet-screen {
+        @include flex(column, center, center);
+        width: 100%;
+      }
+
       #contact-form-name-input {
         margin-right: 24px;
+
+        @include tablet-screen {
+          margin-bottom: 24px;
+          margin-right: 0;
+        }
       }
     }
 
@@ -32,6 +58,10 @@
       border: 1px solid $grey;
       border-radius: $formInputBorderRadius;
       color: white;
+
+      @include tablet-screen {
+        @include size(100%, 56px);
+      }
     }
 
     input[type=submit] {
@@ -46,7 +76,7 @@
 
     .file-wrapper {
       @include flex(row, center, center);
-      padding: 12px 0;
+      padding: 24px 0;
 
       .file-label {
         @include font(16px, 600);
@@ -83,6 +113,7 @@
       border-radius: $formInputBorderRadius;
       color: white;
       resize: none;
+      overflow: hidden;
     }
 
     .button-wrapper {
@@ -91,11 +122,16 @@
   }
 
   .error-block {
+    @include font(16px, 500);
     @include flex(column, center, center);
     @include size(960px, 56px);
     background-color: #F95D51;
     margin: 0 auto;
     border-radius: $formInputBorderRadius;
+
+    @include tablet-screen {
+      @include size(100%, 56px);
+    }
   }
 
   .error-border {
@@ -107,6 +143,7 @@
   }
 
   .additional-text {
+    @include font(16px, 300);
     padding: 24px 0;
     text-align: center;
   }
@@ -118,6 +155,10 @@
     margin: 30px auto 0;
     position: relative;
 
+    @include tablet-screen {
+      @include size(100%, 332px);
+    }
+
     .success-icon {
       position: absolute;
       top: 0;
@@ -127,6 +168,13 @@
     .success-title {
       @include font(36px, 600);
       line-height: 54px;
+      text-align: center;
+
+      @include tablet-screen {
+        @include font(30px, 700);
+        padding: 0 40px;
+        line-height: 36px;
+      }
     }
 
     .success-text {
@@ -135,6 +183,11 @@
       max-width: 640px;
       text-align: center;
       padding-top: 20px;
+
+      @include tablet-screen {
+        @include font(20px, 300);
+        padding: 20px 32px 0;
+      }
     }
   }
 }
