add some optimizations

--- a/_includes/clients/clients.html
+++ b/_includes/clients/clients.html
@@ -13,7 +13,7 @@
             <h1 class="title transite transite-up sn-1">{{ content.title }}</h1>
             <h2 class="subtitle transite transite-up sn-2">{{ content.subTitle }}</h2>
         </div>
-        <div class="clients-container transite transite-up sn-{{ animationTextIndex }}">
+        <div class="clients-container transite transite-up sn-3">
             <div class="splide">
                 <div class="splide__track">
                     <ul class="splide__list">
@@ -46,6 +46,6 @@
             </div>
         </div>
         <a href="/case-study"
-           class="button cases-button transite transite-up sn-{{ animationIndex }}">View All Cases</a>
+           class="button cases-button transite transite-up sn-3">View All Cases</a>
     </div>
 </section>
