add separate page for case study

--- a/_layouts/default-static-header.html
+++ b/_layouts/default-static-header.html
@@ -17,6 +17,7 @@
 <body>
   {% include header/header.html black=true %}
   {{ content }}
+  {% include contact-us/contact-us.html %}
   {% include footer/footer.html %}
   <script src="../assets/scripts/script.js?q=20220805"></script>
 </body>
