--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -23,6 +23,7 @@
 @import "contact-us";
 @import "quote";
 /* pages */
+@import "case-study";
 @import "careers";
 @import "blogs";
 /* case studies */
