--- a/_includes/contact-us/contact-us.html
+++ b/_includes/contact-us/contact-us.html
@@ -5,7 +5,7 @@
   -->
 {% endcomment %}
 
-<section class="section section-dark contact-us">
+<section class="section section-dark contact-us" id="contact-us">
     {% assign content = site.data.contact-us %}
     <div class="content">
         <div class="text-center">
