--- a/_includes/intro/intro.html
+++ b/_includes/intro/intro.html
@@ -14,7 +14,7 @@
         reliable tools and following modern agile methodologies
       </div>
       <div class="button-wrapper transite transite-up sn-3">
-        <button class="button">contact us</button>
+        <a href="/#contact-us" class="button">contact us</a>
       </div>
       <div class="arrow"></div>
     </div>
