--- a/_includes/partnership/partnership.html
+++ b/_includes/partnership/partnership.html
@@ -12,7 +12,7 @@
       <h2 class="description transite transite-up sn-2">We strive to build relationships with our clients that last for years. This makes trust,
         reliability and respect the principle values of our culture.</h2>
       <div class="button-wrapper transite transite-up sn-3">
-        <button class="button">Contact Us</button>
+        <a href="/#contact-us" class="button">Contact Us</a>
       </div>
     </div>
   </div>
