--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -347,6 +347,7 @@ body {
   border-radius: 3px;
   color: white;
   cursor: pointer;
+  text-transform: capitalize;
 
   @include tablet-screen {
     @include size(160px, 60px);
