add stylization to case study page

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -11,6 +11,7 @@
 @import "about";
 @import "advantages";
 @import "blog";
+@import "cases-list";
 @import "clients";
 @import "footer";
 @import "intro";
