bug fixes: #183767887 and incorrect clients cases links

--- a/_layouts/default-static-header.html
+++ b/_layouts/default-static-header.html
@@ -11,6 +11,7 @@
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="{{ site.url }}/assets/css/splide-skyblue.min.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/styles.css" />
     {% include _head/head.html %}
 </head>
@@ -20,5 +21,6 @@
   {% include contact-us/contact-us.html %}
   {% include footer/footer.html %}
   <script src="../assets/scripts/script.js?q=20220805"></script>
+  <script src="../assets/scripts/splide.min.js"></script>
 </body>
 </html>
