--- a/_includes/clients/clients.html
+++ b/_includes/clients/clients.html
@@ -13,7 +13,7 @@
       <h1 class="title transite transite-up sn-1">{{ content.title }}</h1>
       <h2 class="subtitle transite transite-up sn-2">{{ content.subTitle }}</h2>
     </div>
-    <div class="clients-container transite transite-up sn-3">
+    <div class="clients-container carousel transite transite-up sn-3">
       <div class="splide">
         <div class="splide__track">
           <ul class="splide__list">
