--- a/_includes/contact-us/contact-us.html
+++ b/_includes/contact-us/contact-us.html
@@ -18,7 +18,7 @@
                 <input id="contact-form-email-input" name="email" placeholder="Your E-mail" type="text">
             </div>
             <textarea id="contact-form-comment-input" name="comment" placeholder="Your text"
-                      onkeyup="textAreaSizesDependContent(this)"></textarea>
+                      onkeyup="implex.textAreaSizesDependContent(this)"></textarea>
             <div class="file-wrapper">
                 <label id="contact-form-custom-btn" class="file-label" for="contact-form-file-upload">Choose
                     file</label>
