--- a/_layouts/default-static-header.html
+++ b/_layouts/default-static-header.html
@@ -19,7 +19,7 @@
   {% include header/header.html black=true %}
   {{ content }}
   {% if page.showSlider %}
-  {% include cases-list/cases-list.html %}
+  {% include clients-carousel/clients-carousel.html black=true %}
   {% endif %}
   {% include contact-us/contact-us.html %}
   {% include footer/footer.html %}
