--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -13,6 +13,7 @@
 @import "blog";
 @import "cases-list";
 @import "clients";
+@import "clients-carousel";
 @import "footer";
 @import "intro";
 @import "services";
