--- a/_includes/clients-carousel/clients-carousel.scss
+++ b/_includes/clients-carousel/clients-carousel.scss
@@ -77,12 +77,6 @@
             grid-row-gap: 20px;
             margin-top: 80px;
           }
-
-          .title {
-            border-bottom: 3px $orange solid;
-            width: max-content;
-            padding-bottom: 6px;
-          }
         }
 
         .title {
@@ -103,6 +97,14 @@
             font-size: 22px;
             grid-column: 1;
           }
+        }
+
+        .title-button {
+          text-decoration: none;
+          border-bottom: 3px $orange solid;
+          width: max-content;
+          padding-bottom: 6px;
+          color: white;
         }
 
         .description {
