--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="{{ site.url }}/assets/css/styles.css" />
     {% include _head/head.html %}
