--- a/_includes/contact-us/contact-us.scss
+++ b/_includes/contact-us/contact-us.scss
@@ -5,7 +5,7 @@
   padding: 120px 0 136px;
 
   @include tablet-screen {
-    padding: 0 20px 20px;
+    padding: 62px 20px 20px;
   }
 
   .text-center {
